--- a/Supplementary_Files/README
+++ b/Supplementary_Files/README
@@ -5,11 +5,10 @@ Master_List.txt --> List of HR-related genes used (supplied by the authors).
 Final_List.txt --> Final list of samples analized (supplied by the authors).
 Matrices_all_Final_102genes.Rdat (data generated)--> Alteration matrices: germline-LoF, somatic-LoF, somatic-VUS, loh and copy number status.
 
-samples_looked_at/ <- Directory containing the case Ids, per cancer type, considered in this study (supplied by the authors).
+samples_looked_at/ -->  Directory containing the case Ids, per cancer type, considered in this study (supplied by the authors).
 LSTs/ <- LST scores for every cancer type considered (supplied by the authors).
-CN_calls/ <- Total Copy Number calls per cancer type considered (supplied by the authors).
-LOH_calls/ <- LOH calls per cancer type considered (supplied by the authors).
-Germline_files/ <-- Germline (Id and gene) LoF alterations per cancer type (supplied by the authors).
+CopyNumberData.tgz --> Total Copy Number and LOH calls per cancer type considered (supplied by the authors).
+Germline_files/ --> Germline (Id and gene) LoF alterations per cancer type (supplied by the authors).
 
 Scores_Combined_All_Cancers_allLST_allMutSig3_Final.txt --> LST scores and Mutational Signature 3 weights for all cancers considered (supplied by the authors).
 Scores_Combined_All_Cancers_allLST_allMutSigs_DominantSig.txt --> LST scores and all Mutational Signature Weights, as well as dominant Signature for each cancer (supplied by the authors).
