--- a/Supplementary_Files/README
+++ b/Supplementary_Files/README
@@ -1,3 +1,7 @@
+# Table of Contents
+
+* [Team Members](#team-members)
+
 # Description of supplementary files needed for Figures 1 and 2:
 
 Cancers.txt --> List of Cancer Types (TCGA abbreviations, supplied by the authors).
